<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Smarty</string>
    <string name="subtitle">File Exchanging System</string>
    <string name="title_activity_new_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="signing_in">Signing In</string>
    <string name="signing_up">Signing Up</string>
    <string name="title_section1">Inbox</string>
    <string name="title_section2">Friends</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login">SIGN IN</string>
    <string name="sign_up_text">Don\'t have an account? Sign up!</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="get_password">GET PASSWORD</string>
    <string name="forgot_password">Forgot password</string>
    <string name="getting_password">Getting your password</string>
    <string name="password_sent">Your password is sent to your email</string>
    <string name="email_hint">Email</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="phone_number_hint">Phone Number (ex. 09xxxxxxxxx)</string>
    <string name="sign_up_button_label">SIGN UP</string>
    <string name="signup_error_message">There was an error signing up</string>
    <string name="signup_success_message">Your account is successfully created!</string>
    <string name="creating_account">Creating your account</string>
    <string name="signup_error_title">Oops!</string>
    <string name="login_error_message">Incorrect username/password</string>
    <string name="change_password_error">There was an error changing your password</string>
    <string name="login_error_title">Oops!</string>
    <string name="menu_logout_label">Logout</string>
    <string name="empty_inbox_label">No new messages!</string>
    <string name="empty_friends_label">Add friends to begin or check internet connection!</string>
    <string name="menu_edit_friends_label">Add Friends</string>
    <string name="menu_pending_friends_label">Pending Friends</string>
    <string name="title_activity_edit_friends">Edit Friends</string>
    <string name="error_title">We\'re Sorry!</string>
    <string name="menu_camera_label">Camera</string>
    <string name="error_external_storage">There was a problem accessing  your device\'s external storage</string>
    <string name="general_error">Sorry, there was an error!</string>
    <string name="video_file_size_warning">The selected file must be less than 10 MB</string>
    <string name="error_opening_file">There was a problem with the selected file</string>
    <string name="error_file_size_too_large">The selected file is too large! Select a new file!</string>
    <string name="empty_recipients_list_message">Choose some friends first!</string>
    <string name="menu_send_label">Send</string>
    <string name="error_selecting_file">There was an error with the file selected. Please select a different file.</string>
    <string name="success_message">Message sent!</string>
    <string name="error_sending_message">There was an error sending your message. Please try again.</string>
    <string name="sending_file">Sending file</string>
    <string name="internet_error">Please check your internet connection</string>

    <string-array name="camera_choices">
        <item>Take Picture</item>
        <item>Take Video</item>
        <item>Choose Picture</item>
        <item>Choose Video</item>
    </string-array>
    <string-array name="photo_choices">
        <item>Take Picture</item>
        <item>Choose Picture</item>
    </string-array>

    <string name="title_activity_recipients">Choose Recipients</string>
    <string name="title_activity_view_image">Ribbit</string>
    <string name="title_activity_forgot_password">Forgot Password</string>
    <string name="cancel_button_label">CANCEL</string>
    <string name="content_desc_button_divider">Button Divider</string>
    <string name="content_desc_message_icon">Message Icon</string>
    <string name="user_avatar">User avatar</string>
    <string name="content_desc_user_checkmark">Checked mark</string>
    <string name="push_message">You have a new message from %s!</string>
    <string name="title_activity_profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="title_activity_edit_profile">Edit Profile</string>
    <string name="activity_edit_profile_success">Profile successfully updated!</string>
    <string name="success">Success!</string>
    <string name="editing_profile">Editing your profile. Please wait.</string>
    <string name="title_activity_pending_requests">Pending Requests</string>
    <string name="add_successful">Friend request sent</string>
    <string name="add_exist">You have already sent a friend request</string>
    <string name="delete_friend_title">Unfriend</string>
    <string name="delete_friend_body">Are you sure you want to unfriend this person?</string>
    <string name="delete_friend_success">Unfriend successful</string>
    <string name="add_friend_title">Add Friend</string>
    <string name="add_friend_body">Are you sure you want to add this person?</string>
    <string name="accept_request">Accept Friend Request</string>
    <string name="view_profile">View Profile</string>


</resources>