<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/AuthBackground"
    tools:context="com.martyawesome.smarty.app.ui.SignUpActivity">

    <TextView
        android:id="@+id/title"
        style="@style/AuthTitle" />

    <TextView
        android:id="@+id/subTitle"
        style="@style/AuthTitle.AuthSubtitle" />

    <LinearLayout
        android:id="@+id/editTextLayout"
        style="@style/AuthFieldContainer">

        <EditText
            android:id="@+id/usernameField"
            android:hint="@string/username_hint"
            style="@style/AuthEditText" />

        <EditText
            android:id="@+id/passwordField"
            android:inputType="textPassword"
            android:hint="@string/password_hint"
            style="@style/AuthEditText" />

        <EditText
            android:id="@+id/emailField"
            android:inputType="textEmailAddress"
            android:hint="@string/email_hint"
            style="@style/AuthEditText" />

        <EditText
            android:id="@+id/firstName"
            android:hint="@string/first_name_hint"
            style="@style/AuthEditText" />

        <EditText
            android:id="@+id/lastName"
            android:hint="@string/last_name_hint"
            style="@style/AuthEditText" />
    </LinearLayout>

    <ImageView
        android:id="@+id/buttonDivider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextLayout"
        android:layout_centerHorizontal="true"
        android:src="@drawable/button_divider"
        android:contentDescription="@string/content_desc_button_divider" />

    <Button
        android:id="@+id/signUpButton"
        android:text="@string/sign_up_button_label"
        android:layout_below="@+id/editTextLayout"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/buttonDivider"
        android:layout_marginRight="0dp"
        style="@style/AuthButton" />

    <Button
        android:id="@+id/cancelButton"
        android:text="@string/cancel_button_label"
        android:layout_below="@+id/editTextLayout"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/buttonDivider"
        android:layout_marginLeft="0dp"
        style="@style/AuthButton" />
</RelativeLayout>
