<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/AuthBackground"
    tools:context="com.martyawesome.smarty.app.ui.LoginActivity"
    android:id="@+id/layout">

    <TextView
        android:id="@+id/title"
        style="@style/AuthTitle" />

    <TextView
        android:id="@+id/subTitle"
        style="@style/AuthTitle.AuthSubtitle" />


    <LinearLayout
        android:id="@+id/editTextLayout"
        style="@style/AuthFieldContainer">

        <EditText
            android:id="@+id/usernameField"
            android:hint="@string/username_hint"
            style="@style/AuthEditText">
            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/passwordField"
            android:inputType="textPassword"
            android:hint="@string/password_hint"
            style="@style/AuthEditText" />
    </LinearLayout>


    <Button
        android:id="@+id/loginButton"
        android:text="@string/login"
        android:layout_below="@+id/editTextLayout"
        android:layout_alignParentLeft="true"
        android:background="@drawable/button_custom_grey"
        style="@style/AuthButton"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_text"
        android:id="@+id/signUpText"
        android:layout_below="@+id/loginButton"
        android:layout_marginTop="12dp"
        android:textColor="@android:color/white"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:id="@+id/forgotPassword"
        android:layout_below="@+id/signUpText"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"
        android:layout_marginTop="@dimen/login_vertical_margin" />


</RelativeLayout>
