<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.martyawesome.smarty.app.ui.MainActivity" >



    <item android:id="@+id/action_camera"
        android:title="@string/menu_camera_label"
        android:icon="@drawable/ic_action_camera"
        android:showAsAction="ifRoom" />

    <item android:id="@+id/submenu"
        android:title="More"
        android:icon="@drawable/ic_action_overflow"
        android:showAsAction="always" >
        <menu>
            <item android:id="@+id/action_edit_friends"
                android:title="@string/menu_edit_friends_label"
                android:visible="true"/>

            <item android:id="@+id/action_logout"
                android:title="@string/menu_logout_label"
                android:visible="true"/>
        </menu>
    </item>
</menu>
