<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/AuthBackground"
    tools:context="com.martyawesome.smarty.app.ui.ForgotPasswordActivity">

    <LinearLayout
        android:id="@+id/editTextLayout"
        style="@style/AuthFieldContainer">

        <EditText
            android:id="@+id/emailField"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            style="@style/AuthEditText">
            <requestFocus />
        </EditText>

    </LinearLayout>

    <ImageView
        android:id="@+id/buttonDivider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextLayout"
        android:layout_centerHorizontal="true"
        android:src="@drawable/button_divider"
        android:contentDescription="@string/content_desc_button_divider" />

    <Button
        android:text="@string/get_password"
        android:id="@+id/password_button"
        android:layout_below="@+id/editTextLayout"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/buttonDivider"
        android:layout_marginRight="0dp"
        style="@style/AuthButton" />

    <Button
        android:id="@+id/cancelButton"
        android:text="@string/cancel_button_label"
        android:layout_below="@+id/editTextLayout"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/buttonDivider"
        android:layout_marginLeft="0dp"
        style="@style/AuthButton" />

</RelativeLayout>
