<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_profile_horizontal_margin"
    android:paddingRight="@dimen/activity_profile_horizontal_margin"
    android:paddingBottom="@dimen/activity_profile_vertical_margin"
    android:paddingTop="@dimen/activity_profile_vertical_margin"
    tools:context="com.martyawesome.smarty.app.ui.ProfileActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="12">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="4">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/avatar_empty"
                android:layout_marginBottom="@dimen/login_vertical_margin" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@color/lightest_grey">

            <Button
                android:id="@+id/editProfileButton"
                android:text="@string/edit_profile"
                style="@style/AuthButton"
                android:layout_margin="0dp"
                android:layout_gravity="center_horizontal"
                android:textSize="20dp"
                android:background="@drawable/button_custom_grey" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:background="@color/lightest_grey"
            android:orientation="vertical">

            <EditText
                style="@style/AuthEditText"
                android:layout_marginLeft="@dimen/user_grid_spacing"
                android:layout_marginRight="@dimen/user_grid_spacing"
                android:id="@+id/username"
                android:hint="@string/username_hint"/>

            <EditText
                style="@style/AuthEditText"
                android:layout_marginLeft="@dimen/user_grid_spacing"
                android:layout_marginRight="@dimen/user_grid_spacing"
                android:layout_marginTop="@dimen/user_grid_spacing"
                android:id="@+id/firstName"
                android:hint="@string/first_name_hint"/>

            <EditText
                style="@style/AuthEditText"
                android:layout_marginLeft="@dimen/user_grid_spacing"
                android:layout_marginRight="@dimen/user_grid_spacing"
                android:layout_marginTop="@dimen/user_grid_spacing"
                android:id="@+id/lastName"
                android:hint="@string/last_name_hint"/>

            <EditText
                style="@style/AuthEditText"
                android:layout_marginLeft="@dimen/user_grid_spacing"
                android:layout_marginRight="@dimen/user_grid_spacing"
                android:layout_marginTop="@dimen/user_grid_spacing"
                android:id="@+id/email"
                android:inputType="textEmailAddress"
                android:hint="@string/email_hint" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
